--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
     "prepare": "husky"
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "dependencies": {
     "@next/bundle-analyzer": "14.1.4",
     "@tailwindcss/forms": "^0.5.7",
