--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "spellchecker-cli": "^6.2.0",
     "typescript": "^5.1.3"
   },
   "lint-staged": {
