--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/bundle-analyzer": "14.1.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@wojtekmaj/react-hooks": "^1.18.0",
     "autoprefixer": "^10.4.13",
     "contentlayer2": "0.4.4",
     "esbuild": "0.20.2",
@@ -31,6 +32,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "latest",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
@@ -50,6 +52,7 @@
     "@types/react": "^18.2.73",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
+    "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
     "eslint-config-next": "14.1.0",
@@ -59,6 +62,7 @@
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "raw-loader": "^4.0.2",
     "spellchecker-cli": "^6.2.0",
     "typescript": "^5.1.3"
   },
