--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-pdf": "latest",
+    "react-pdf": "^7.7.1",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
