--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-themes": "^0.3.0",
     "pliny": "0.2.1",
     "postcss": "^8.4.24",
+    "posthog-js": "^1.155.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-pdf": "^7.7.1",
