--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@wojtekmaj/react-hooks": "^1.18.0",
     "autoprefixer": "^10.4.13",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "clsx": "^2.1.1",
     "contentlayer2": "0.5.1",
     "esbuild": "0.20.2",
     "github-slugger": "^2.0.0",
