--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
+    "spellcheck": "spellchecker --config .spellcheckerrc.json",
+    "spellcheck:report": "spellchecker --config .spellcheckerrc.json > spellcheck-results.txt 2>&1 || true",
+    "spellcheck:fix": "spellchecker --config .spellcheckerrc.json --generate-dictionary",
+    "spellcheck:ci": "spellchecker --config .spellcheckerrc.json --quiet --no-suggestions > spellcheck-results.txt 2>&1 && echo 'Spell check passed' || (echo 'Spell check failed. See spellcheck-results.txt for details' && exit 1)",
+    "cspell": "cspell lint",
+    "cspell:check": "cspell lint '**/*.{md,mdx,tsx,ts,js,jsx}'",
+    "cspell:report": "cspell lint '**/*.{md,mdx,tsx,ts,js,jsx}' > cspell-results.txt 2>&1 || true",
     "prepare": "husky"
   },
   "engines": {
@@ -63,6 +70,7 @@
     "@typescript-eslint/parser": "^8.12.0",
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
+    "cspell": "^9.1.3",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.2",
     "eslint-config-prettier": "^9.1.0",
@@ -82,6 +90,9 @@
     ],
     "*.+(js|jsx|ts|tsx|json|css|md|mdx)": [
       "prettier --write"
+    ],
+    "*.+(md|mdx|tsx|ts)": [
+      "cspell lint --no-must-find-files"
     ]
   },
   "packageManager": "yarn@3.6.1"
