--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,13 @@
 [[redirects]]
   from = "/ingest/static/*"
   to = "https://us-assets.i.posthog.com/static/:splat"
-  host = "us-assets.i.posthog.com"
   status = 200
   force = true
-  headers = { X-From = "netlify", Access-Control-Allow-Origin = "*" }
+  headers = { X-From = "netlify" }
 
 [[redirects]]
   from = "/ingest/*"
   to = "https://us.i.posthog.com/:splat"
-  host = "us.i.posthog.com"
   status = 200
   force = true
-  headers = { X-From = "netlify", Access-Control-Allow-Origin = "*" }
+  headers = { X-From = "netlify" }
